--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,5 @@
-STRING_SESSION1 = ""
-SUDO_USERS = ""
-OWNER_ID = ""
-BOT_TOKEN = ""
-MONGO_URL = ""
+STRING_SESSION1 =
+SUDO_USERS = 6199238732
+OWNER_ID = 6199238732
+BOT_TOKEN =
+MONGO_URL =
